--- a/src/main/resources/templates/admin/food_add/index.html
+++ b/src/main/resources/templates/admin/food_add/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" th:href="@{../../bootstrap/css/bootstrap-theme.min.css}"/>
-    <link rel="stylesheet" th:href="@{../../bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{../../css/css-main.css}"/>
-    <script type="text/javascript" th:src="@{../../jQuery/jquery-3.4.1.min.js}"></script>
-    <script type="text/javascript" th:src="@{../../bootstrap/js/bootstrap.min.js}"></script>
-    <script type="text/javascript" th:src="@{../../js/common.js}"></script>
+    <link rel="stylesheet" th:href="@{../../static/bootstrap/css/bootstrap-theme.min.css}"/>
+    <link rel="stylesheet" th:href="@{../../static/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{../../static/css/css-main.css}"/>
+    <script type="text/javascript" th:src="@{../../static/jQuery/jquery-3.4.1.min.js}"></script>
+    <script type="text/javascript" th:src="@{../../static/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{../../static/js/common.js}"></script>
     <style type="text/css">
         .main-title{
             color: #5a6268;
