--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>管理员登录</title>
-    <link th:href="@{../../css/bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{../../css/signin.css}" rel="stylesheet">
-    <script th:src="@{../../jQuery/jquery-3.4.1.min.js}"></script>
-    <script th:src="@{../../js/bootstrap.min.js}"></script>
+    <link th:href="@{../../static/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{../../static/css/signin.css}" rel="stylesheet">
+    <script th:src="@{../../static/jQuery/jquery-3.4.1.min.js}"></script>
+    <script th:src="@{../../static/js/bootstrap.min.js}"></script>
 </head>
 <body class="text-center">
 
