--- a/src/main/resources/templates/setting/setting.html
+++ b/src/main/resources/templates/setting/setting.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>初始化</title>
-    <link th:href="@{../../css/bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{../../font-awesome/css/font-awesome.min.css}">
-    <link th:href="@{../../static/css/css-main.css}" rel=stylesheet>
-    <script th:src="@{../../jQuery/jquery-3.4.1.min.js}"></script>
-    <script th:src="@{../../js/bootstrap.min.js}"></script>
-    <script th:src="@{../../js/common.js}"></script>
+    <link th:href="@{../../static/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{../../static/font-awesome/css/font-awesome.min.css}">
+    <link th:href="@{../../static/static/css/css-main.css}" rel=stylesheet>
+    <script th:src="@{../../static/jQuery/jquery-3.4.1.min.js}"></script>
+    <script th:src="@{../../static/js/bootstrap.min.js}"></script>
+    <script th:src="@{../../static/js/common.js}"></script>
     <style>
         .container{
             text-align: center;
