--- a/src/main/resources/templates/admin/food_manage/edit.html
+++ b/src/main/resources/templates/admin/food_manage/edit.html
@@ -21,6 +21,9 @@
             list-style: none;
             margin-bottom: 15px;
         }
+        .none{
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -28,7 +31,7 @@
     <div class="main-title">
         <h2>编辑商品</h2>
     </div>
-    <form enctype="multipart/form-data" method="post" id="edit_form" action="">
+    <form enctype="multipart/form-data" method="post" id="edit_form" action="/admin/food/updatefood">
         <div class="panel panel-default">
             <ul>
                 <li>
@@ -49,7 +52,7 @@
                     <label>商品图片</label>
                     <div class="upload-pic">
                         <img class="img" th:src="${food.getImage_url()}" width="100" height="100">
-                        <input class="a" type="file" name="file" accept="image/*" required>
+                        <input class="a" type="file" name="file" accept="image/*">
                         <script>
                             $('.a').change(function(e) {
                                 var _URL = window.URL || window.webkitURL;
@@ -73,11 +76,13 @@
                     </div>
                 </li>
                 <li>
+                    <input class="none" name="foodid" th:value="${food.getId()}">
                     <input type="submit" class="btn btn-primary" value="保存商品"/>
                 </li>
             </ul>
         </div>
     </form>
+    <a th:href="${'/admin/food/getfoodmanageindex'}"><button class="btn btn-success">返回上一个页面</button></a>
 
 </div>
 </body>
