--- a/src/main/resources/templates/admin/food_manage/index.html
+++ b/src/main/resources/templates/admin/food_manage/index.html
@@ -51,6 +51,7 @@
                 <thead>
                 <tr>
                     <th width="200">标题</th>
+                    <th width="80">图片</th>
                     <th width="146">分类</th>
                     <th width="130">创建时间</th>
                     <th width="50">价格</th>
@@ -61,11 +62,12 @@
                 <tbody>
                 <tr th:each="food:${foods}">
                     <td th:text="${food.getName()}"></td>
+                    <td><img th:src="${'/static/static/uploads/'+food.getImgUrl()}"></td>
                     <td th:text="${food.getCategory()}"></td>
                     <td><small th:text="${food.getCreate_time()}"></small></td>
                     <td th:text="${food.getPrice()}"></td>
                     <td th:text="${food.getStatus()}"></td>
-                    <td><a th:href="@{'/admin/food/geteditindex?id='+${food.getId()}}" style="margin-right:7px">编辑</a><a th:href="@{'/admin/food/deletefood?id=' + ${food.getId()}}" style="color:#C13932">删除</a></td>
+                    <td><a th:href="@{'/admin/food/geteditindex?id='+${food.getId()}+'&cid='+${food.getCategory_id()}}" style="margin-right:7px">编辑</a><a th:href="@{'/admin/food/deletefood?id=' + ${food.getId()}}" style="color:#C13932">删除</a></td>
                 </tr>
                 </tbody>
             </table>
