--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -96,7 +96,7 @@
             <li class="active" role="presentation"><a href="/admin/main/index" target="mainFrame">首页</a></li>
             <li role="presentation"><a href="#" target="mainFrame">待发货</a></li>
             <li role="presentation"><a href="/admin/food/getfoodaddindex" target="mainFrame">添加商品</a></li>
-            <li role="presentation"><a href="/admin/food/getfoodmanageindex" target="mainFrame">管理商品</a></li>
+            <li role="presentation"><a href="/admin/food/findfoods?pageNow=1&categoryid=-1&search=" target="mainFrame">管理商品</a></li>
             <li role="presentation"><a href="/admin/category/index" target="mainFrame">分类</a></li>
             <li role="presentation"><a href="#" target="mainFrame">订单</a></li>
             <li role="presentation"><a href="#" target="mainFrame">客户</a></li>
