--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -78,13 +78,13 @@
         }
     </style>
 </head>
-<body>
+<body onselectstart="return false" >
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header"><a class="navbar-brand" title="logoTitle" href="#">后台管理</a></div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li role="presentation"><a href="#">当前用户：<span class="badge" th:text="${session.admin.getUsername()}"></span></a></li>
+                <li role="presentation"><a href="/admin/updatepwd/index">当前用户：<span class="badge" th:text="${session.admin.getUsername()}"></span></a></li>
                 <li><a href="/admin/logout"> <span class="glyphicon glyphicon-lock"></span>退出登录</a></li>
             </ul>
         </div>
