--- a/src/main/resources/templates/admin/user/index.html
+++ b/src/main/resources/templates/admin/user/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="main-user">
-    <div class="main-title"><h2>客户管理</h2></div>
+    <div class="main-title"><h2>客户信息查看</h2></div>
     <div class="main-section">
         <table class="table table-striped table-bordered table-hover" style="max-width:600px;">
             <thead>
@@ -25,7 +25,6 @@
                 <th width="100">客户编号</th>
                 <th width="130">消费金额</th>
                 <th width="130">注册时间</th>
-                <th width="130">操作</th>
             </tr>
             </thead>
             <tbody>
@@ -33,9 +32,6 @@
                 <td th:text="${user.getId()}"></td>
                 <td th:text="${user.getPrice()}"></td>
                 <td th:text="${user.getCreate_time()}"><small></small></td>
-                <td>
-                    <a href="">查看订单</a>
-                </td>
             </tr>
             </tbody>
         </table>
@@ -43,8 +39,8 @@
     <div class="main-section">
         <ul class="pagination">
             <li id="back"><a th:href="@{'/admin/order/index?pageNow=' + ${pageBack}}">«</a></li>
-            <li th:each="page:${pageList}" th:id="'page'+${page}"><a th:href="@{'/admin/order/index?pageNow=' + ${page}}" th:text="${page}"></a></li>
-            <li id="next" ><a th:href="@{'/admin/order/index?pageNow=' + ${pageNext}}">»</a></li>
+            <li th:each="page:${pageList}" th:id="'page'+${page}"><a th:href="@{'/admin/user/index?pageNow=' + ${page}}" th:text="${page}"></a></li>
+            <li id="next" ><a th:href="@{'/admin/user/index?pageNow=' + ${pageNext}}">»</a></li>
         </ul>
         <script th:inline="javascript">
             var idNow = [[${pageNow}]];
